# photo-organizer

./: .gitignore  README.md  constitution.md  plan.md  pyproject.toml  spec.md  tasks.md
src/photo_organizer/: __init__.py  __main__.py  cli.py  organizer.py
src/photo_organizer/metadata/: __init__.py  exif.py  fallback.py  quicktime.py
