[project]
name = "photo-organizer"
version = "0.1.0"
description = "Organize photos and videos by media creation date"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
photo-organizer = "photo_organizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_organizer"]
